clusters/my-cluster/apps/test-server/mongoDB-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
            - mountPath: /docker-entrypoint-initdb.d
              name: init-script
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: init-script
          configMap:
            name: mongo-init-cm
---

apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 27017
      targetPort: 27017
