clusters/my-cluster/apps/test-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skmz-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /playground
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
